# datasette-files-s3

./: .gitignore  README.md  dev-server.sh  pyproject.toml
.github/workflows/: publish.yml
datasette_files_s3/: __init__.py
tests/: test_files_s3.py
