[project]
name = "datasette-files-s3"
version = "0.1"
description = "datasette-files S3 backend"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.10"
dependencies = [
    "datasette-files>=0.1a0",
    "aioboto3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/datasette/datasette-files-s3"
Changelog = "https://github.com/datasette/datasette-files-s3/releases"
Issues = "https://github.com/datasette/datasette-files-s3/issues"
CI = "https://github.com/datasette/datasette-files-s3/actions"

[project.entry-points.datasette]
files_s3 = "datasette_files_s3"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiomoto[s3]",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

